SERVER-109134 Initialize _originalState (#41565)

GitOrigin-RevId: 6f88257b04e385e08fa33fd03e6917817ce273a3